Change title and update visual overlay options

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>VNCHEAT AI NEXT-GEN</title>
+    <title>VNCHEAT</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root { --neon: #ff003c; --glow: rgba(255, 0, 60, 0.6); --dark: #050505; }
@@ -150,9 +150,9 @@
     <div id="visuals" class="main-content">
         <div class="section-title">Visual Overlays</div>
         <div class="card">
-            <div class="row"><span>ESP Box 3D</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
-            <div class="row"><span>ESP Line</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
-            <div class="row"><span>ESP Skeleton</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
+            <div class="row"><span>Tối ưu IOS</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
+            <div class="row"><span>Bypass</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
+            <div class="row"><span>SakePhim</span><label class="switch"><input type="checkbox"><span class="slider"></span></label></div>
         </div>
     </div>
 
